--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="This is a test web-app for testing the performance impact of images.">
   <link rel="stylesheet" href="./style.css" media="none" onload="if(media!='all')media='all'">
   <title>Social Pixi</title>
 </head>
